--- a/templates/expmanage/expsettings.html
+++ b/templates/expmanage/expsettings.html
@@ -1,7 +1,7 @@
 {% extends '../main.html' %}
 
 {% block title %}
-    {{ exp['exp_title'] }}--实验配置
+    实验配置 - {{ exp['exp_title'] }}
 {% end %}
 
 {% block js %}
