--- a/templates/main.html
+++ b/templates/main.html
@@ -55,7 +55,7 @@
 
     {% block footer %}
         <div class="footer">
-            <span>2015@Copyright Powered by ISE-JKiriS</span>&nbsp;
+            <span>&copy; 2015 ISE, Designed by JKiriS</span>&nbsp;
             <a href="/help">帮助</a>&nbsp;
             <a>关于</a>&nbsp;
             <a>联系我们</a>
