--- a/templates/expmanage/result.html
+++ b/templates/expmanage/result.html
@@ -1,7 +1,7 @@
 {% extends '../main.html' %}
 
 {% block title %}
-    {{ exp['exp_title'] }}--个人收益
+    个人收益 - {{ exp['exp_title'] }}
 {% end %}
 
 {% block style %}
@@ -18,6 +18,7 @@
             <thead>
             <tr>
                 <th>#</th>
+                <th>轮数</th>
                 <th>阶段</th>
                 <th>赢否</th>
                 <th>获胜价</th>
@@ -29,6 +30,7 @@
             {% for i, r in enumerate(results) %}
             <tr>
                 <td>{{ i+1 }}</td>
+                <td>{{ r['round'] }}</td>
                 <td>{% if r['type'] == '0' %}密封拍卖{% elif r['type'] == '1' %}公开拍卖(价值隐藏){% else %}公开拍卖(价值公开){% end %}</td>
                 <td>{% if r['win'] == '0' %}否{% else %}赢{% end %}</td>
                 <td>{{ r['win_price'] }}</td>
@@ -37,11 +39,11 @@
             </tr>
             {% end %}
             <tr >
-                <td colspan="5">初始奖励</td>
+                <td colspan="6">初始奖励</td>
                 <td>10（元）</td>
             </tr>
             <tr class="success">
-                <td colspan="5">合计</td>
+                <td colspan="6">合计</td>
                 <td >{{ sum(map(lambda a: a['profit'], results)) }} * 10 + 10 = {{ sum(map(lambda a: a['profit'], results))* 10 + 10 }}（元）</td>
             </tr>
             </tbody>
